--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ body {
 .nav-container {
   height: 50px;
   display: flex;
-  background-color: #394b64;
+  background-color: #1f2937;
 }
 .logo {
   font-size: 24px;
